# rss_aggregator

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  feeds.yaml  pyproject.toml
scripts/: init_db.py
src/rss_aggregator/: __init__.py  config.py  db.py  embedding.py  models.py  nlp.py
src/rss_aggregator/api/: entries.py  main.py
src/rss_aggregator/core/: feed.py  feed_entry.py
src/rss_aggregator/ingestion/: fetcher.py  loader.py  main.py  pipeline.py  transformer.py
src/rss_aggregator/util/: logging.py
