[project]
name = "rss-aggregator"
version = "0.1.0"
description = "RSS Aggregator"
readme = "README.md"
authors = [
    { name = "Serhiy Batyuk", email = "sbatyuk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.24",
]

[project.scripts]
rss-aggregator = "rss_aggregator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
